# http2py

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/http2py/: cli_maker.html  client.html  py2request.html  util.html
docs/_sources/: index.rst.txt  table_of_contents.rst.txt
docs/_sources/module_docs/: http2py.rst.txt
docs/_sources/module_docs/http2py/: authentication.rst.txt  client.rst.txt  decorators.rst.txt  default_configs.rst.txt  http2py_cls.rst.txt  testing_utils.rst.txt
docs/module_docs/: http2py.html
docs/module_docs/http2py/: authentication.html  cli_maker.html  client.html  decorators.html  default_configs.html  example_cli.html  global_state.html  http2py_cls.html  py2request.html  testing_utils.html  util.html
docsrc/: table_of_contents.rst
docsrc/module_docs/http2py/: api_pkg_maker.rst  cli_maker.rst  constants.rst  example_cli.rst  global_state.rst  py2request.rst  util.rst
docsrc/module_docs/http2py/tests/: api_pkg_maker_test.rst  conftest.rst  (+1 more)
http2py/: __init__.py  api_pkg_maker.py  authentication.py  cli_maker.py  client.py  constants.py  decorators.py  default_configs.py  example_cli.py  example_osys_cli.py  global_state.py  http2py.py  py2request.py  testing_utils.py  util.py
http2py/tests/: api_pkg_maker_test.py  conftest.py  test_requirements.txt  util_test.py
http2py/tests/test_data/: simple_openapi_spec.yaml
