# Inside of setup.cfg
[metadata]
name = http2py
version = 0.1.3
root_url = https://github.com/i2mint
description = Tools to create python binders to http web services.
author = ADI
license = Apache
description-file = README.md
keywords =
    webservice
    http
    requests
    API
install_requires =
    glom==20.8.0
    i2==0.0.6
    requests==2.24.0
    argh==0.26.2
    PyYAML==5.3.1
