# Inside of setup.cfg
[metadata]
name = http2py
version = 0.1.20
url = https://github.com/i2mint/http2py
root_url = https://github.com/i2mint
platforms = any
description = Tools to create python binders to http web services.
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = Otosense
license = Apache
description-file = README.md
keywords =
    webservice
    http
    requests
    API
copyright =
		2020
		Otosense
display_name = Http2py

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    glom
    i2
    requests
    argh
    PyYAML

[options.entry_points]
console_scripts = 
	api-pkg-maker = http2py.api_pkg_maker:main
